# tauri-audio-denoiser

./: .gitignore  README.md  gen-sql-filter.sh  init-db.sh  make-icon.py  package.json  redis.conf  zoom.py
src/: App.svelte  bandpass-slider.svelte  constants.svelte  freq-plot.svelte  freq-slider.svelte  functions.svelte  plot.svelte  rotary-slider.svelte  settings.svelte  shortcut.svelte  slider.svelte  styles.css  time-plot.svelte  types.svelte  types.ts  zoomable-slider.svelte
src-tauri/: Cargo.toml  gen-types.sh  gen_types.ps1  init-db.ps1  init-db.sh  redis.conf  tauri.conf.json  types.svelte-e
src-tauri/assets/: redis.conf
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  constants.rs  errors.rs  file_io.rs  fourier.rs  lib.rs  main.rs  messages.rs  oscillator.rs  sdft.rs  server.rs  settings.rs  sql.rs  types.rs
src-tauri/tests/: all.rs
