[package]
name = "denoiser"
version = "0.1.0"
description = "audio denoiser"
authors = ["eric carmi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "dialog-all", "fs-all", "path-all", "shell-open", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5.1"
anyhow = "1.0.81"
cpal = "0.15.3"
dasp_ring_buffer = "0.11.0"
chrono = "0.4.37"
rustfft = "6.2.0"
dsp = "0.11.0"
redis = { version = "0.25.2", features = ["tokio-comp"] }
wav_io = "0.1.14"
rand = "0.8.5"
simplelog = "0.12.2"
log = "0.4.21"
rusqlite = { version = "0.31.0", features = ["serde_json"] }
ts-rs = "8.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
